Kubernetes Services/Website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: your-custom-image:tag  # Replace with your actual image and tag
          ports:
            - containerPort: 80
